--- a/recipes.html
+++ b/recipes.html
@@ -109,7 +109,7 @@
     <script>
         const recipes = [
             {
-                title: "ギョーザのタレ",
+                title: "ラーメンタレ",
                 sections: [
                     {
                         subtitle: "炒める",
@@ -212,6 +212,18 @@
                             { key: "キャノーラ油", value: "おたま2杯" },
                             { key: "にんにく", value: "200g" },
                             { key: "ニラ", value: "2把" }
+                        ]
+                    }
+                ]
+            },
+            {
+                title: "ぎょうざタレ",
+                sections: [
+                    {
+                        items: [
+                            { key: "お酢", value: "おたま2" },
+                            { key: "濃口醤油", value: "おたま3" },
+                            { key: "水", value: "おたま4" }
                         ]
                     }
                 ]
